--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@ Released   : 20120528
 <title><%= title %></title>
 <link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css" />
 <link href="http://fonts.googleapis.com/css?family=Coda:400,800" rel="stylesheet" type="text/css" />
-<link href="public/style.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
 <div id="menu-wrapper">
